# jirasimp

./: .gitignore  README.md  bumpversion.py  publish.sh  pyproject.toml  requirements.in
jirasimp/: __init__.py  check.py  compare.py  googlesheet.py  jira_part.py  main.py  mapping.json  oauth_key.json  report.py  simplicate.py  utilities.py
jirasimp/cache/: 2022-05-24_2022-05-25.json  Development Q3_TRAV-11_2022-07-04_2022-08-01.json  Doorontwikkeling Terschelling website_TER-2_2022-07-04_2022-08-01.json  Internal Q3 & Q4_TRAV-11_2022-07-04_2022-08-01.json  Internal Summer project 2022_TRAV-11_2022-07-04_2022-08-01.json  TRAV-11_2022-05-02_2022-05-03.json  TRAV-11_2022-05-02_2022-05-30.json  TRAV-11_2022-07-04_2022-08-01.json  TRAV-13_2022-05-02_2022-05-03.json  TRAV-13_2022-05-02_2022-05-30.json  TRAV-13_2022-05-24_2022-05-25.json  TRAV-13_2022-07-04_2022-08-01.json  TRAV-20_2022-05-02_2022-05-03.json  TRAV-20_2022-05-02_2022-05-30.json  TRAV-20_2022-07-04_2022-08-01.json  UIR-1_2022-05-02_2022-05-03.json  UIR-1_2022-05-02_2022-05-30.json  UIR-1_2022-07-04_2022-08-01.json  VWF-4_2022-05-02_2022-05-30.json  VWF-4_2022-05-24_2022-05-25.json  VWF-4_2022-07-04_2022-08-01.json
